# somegl

./: CMakeLists.txt  README.md  build_windows.bat
include/glad/: glad.h
source/: Main.cpp  glad.c
